# computer-graphics

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  prog
opengl-triangle/: CMakeLists.txt  README.md  main.cpp
opengl-triangle/include/glad/: glad.h
opengl-triangle/src/: glad.c
vulkan/: Makefile  main.cpp
vulkan/shaders/: shader.frag
